# oxen-encoding

./: .drone.jsonnet  .gitignore  .gitmodules  CMakeLists.txt  liboxenc.pc.in  readme.md
debian/: changelog  ci-upload.sh  control  gbp.conf  rules
debian/patches/: 0001-Add-missing-cstdint-header-for-uintN_t-typedefs.patch  series
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst
oxenc/: base32z.h  base64.h  bt.h  bt_producer.h  bt_serialize.h  bt_value.h  bt_value_producer.h  byte_type.h  endian.h  hex.h  oxenenc.h  variant.h  version.h.in
oxenenc/: base32z.h  base64.h  bt_serialize.cpp  bt_serialize.h  bt_value.h  byte_type.h  hex.h
tests/: CMakeLists.txt  common.h  test_bt.cpp  test_encoding.cpp  test_endian.cpp
utils/: format.sh
